--- a/src/styles/Irrelevant.module.css
+++ b/src/styles/Irrelevant.module.css
@@ -1,7 +1,7 @@
 .DarkTheme{
-    background-color: rgb(60, 60, 60);
+    background-color: rgb(76, 60, 60);
 }
 
 .LightTheme{
-    background-color: #fff;
+    background-color: #ffa;
 }
