--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,5 +1,6 @@
 .MainContainer {
   height: 700px;
+  background-image: url("../assets/pictures/menu.jpg");
   background-size: cover;
   margin: -8px;
 }
@@ -40,6 +41,18 @@
   opacity: 100;
 }
 
+.menuLogo{
+  z-index: 1000;
+}
+
+.menuPhone{
+  z-index: 1000;
+}
+
+.menuBurger{
+  z-index: 1000;
+}
+
 .phoneNumberNotVisible {
   font-size: 12px;
   font-weight: 700;
@@ -58,7 +71,7 @@
   height: 55%;
   transform: translateY(100%);
   z-index: -500;
-  transition: 6s;
+  transition: 0.7s;
   opacity: 0;
   margin: -10px;
 }
@@ -114,7 +127,75 @@
   text-decoration: underline;
 }
 
-.menuLink{
+.menuLink {
   color: black;
   text-decoration: none;
+}
+
+@media screen and (max-width: 376px) {
+  .menuLogo {
+    position: relative;
+    width: 130px;
+    height: 16px;
+    margin: 10px;
+    z-index: 1000;
+  }
+  .MenuIconsContainer {
+    display: flex;
+    justify-content: space-between;
+    padding: 60px 25px;
+  }
+  .menuPhone {
+    width: 24px;
+    height: 24px;
+    z-index: 10;
+  }
+  .menuBurger {
+    position: relative;
+    width: 28px;
+    height: 28px;
+    margin: 5px;
+    z-index: 12345;
+  }
+  .PhoneAndBurgerContainer {
+    margin: -1px;
+  }
+  .MainContainer {
+    background-image: url("../assets/pictures/PhoneBackgroundImage.jpg");
+    background-size: cover;
+  }
+  .menuIconAndTextContainer {
+    position: absolute;
+    top: 452px;
+    left: 20px;
+  }
+  .SideMenu {
+    position: absolute;
+    top: 0px;
+    padding-top: 100px;
+    width: 100%;
+    height: 120%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(100%);
+    z-index: -500;
+    transition: 0.7s;
+    opacity: 0;
+  }
+  .SideMenuVisible {
+    position: absolute;
+    top: 0px;
+    padding-top: 100px;
+    width: 100%;
+    height: 120%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    right: 10px;
+    transform: translateX(0);
+    z-index: 500;
+    transition: 0.7s;
+    background-color: #e8eff9;
+  }
 }
