--- a/src/styles/Why.module.css
+++ b/src/styles/Why.module.css
@@ -38,3 +38,13 @@
     margin-top: 100px;
     margin-left: 40px;
 }
+@media screen and (max-width:376px) {
+  .BenefitsContainer{
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+  }
+  .DescriptionText{
+    width: 75%;
+  }
+}
