--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -20,6 +20,8 @@
 
 .CategoryInnerContainer {
   margin: 30px 0 0 0;
+  width: 100%;
+  display: flex;
 }
 
 .Header3 {
@@ -56,4 +58,25 @@
   color: white;
   border: none;
   transition: 0.15s;
+}
+@media screen and (max-width:376px) {
+  .ContainerImageA{
+    width: 130px;
+    height: 130px;
+    margin-right: 10px;
+  }
+  .imageA{
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    object-position: -80px;
+  }
+  .imageB{
+    width: 130px;
+    height: 130px;
+  }
+  .CategoryInnerContainer{
+    display: flex;
+  }
 }
