--- a/src/styles/Foot.module.css
+++ b/src/styles/Foot.module.css
@@ -3,3 +3,9 @@
     margin-left: -10px;
     margin-bottom: -15px;
 }
+@media screen and (max-width:376px) {
+    .FooterImage{
+        width: 105%;
+        height: auto;
+    }
+}
