--- a/src/styles/Recommended.module.css
+++ b/src/styles/Recommended.module.css
@@ -19,3 +19,8 @@
     flex-direction: column;
     align-items: start;
 }
+@media screen and (max-width:376px) {
+    .ProductsContainer{
+        flex-direction: column;
+    }   
+}
